Styles changes to markdown editor - Change button type for preview button - Add padding-top to prevent text/button overlap

--- a/src/components/MarkdownEditor/MarkdownEditor.module.scss
+++ b/src/components/MarkdownEditor/MarkdownEditor.module.scss
@@ -7,6 +7,7 @@
 
   textarea {
     position: relative;
+    padding-top: 3.35rem;
     padding-bottom: 3rem;
 
     @media only screen and (min-width: 56.25em) {
